# SnaillyJaya

./: .env.example  .gitignore  Dockerfile  create_tables.py  pyproject.toml  server.py
migrations/versions/: 12299d85b520_update.py  2b408855ba9a_init.py  44831d9e90c1_.py  49bea8b7013f_update.py  5d2634ee9f88_update.py
src/config/: config.py
src/controllers/: MainController.py
src/models/: CleanData.py  LogActivity.py  ScreenshotData.py
src/repositories/: CleanDataRepository.py  LogActivityRepository.py  ScreenshotDataRepository.py
src/services/: CleanDataServices.py  CleanJagaDataServices.py  CreateScreenshoot.py  PredictDataServices.py
src/utils/Preprocessing/: BackingVideo.py  GITImageProcessor.py  ImageProcessor.py  TextProcessor.py  TextProcessorBERT.py  VideoJagaProcessor.py  VideoProcessor.py
src/utils/Scrapping/: Scrapping.py  ScrappingJagaMedsos.py  ScrappingMedsos.py
